--- a/client/bower.json
+++ b/client/bower.json
@@ -25,5 +25,8 @@
     "threejs": "*",
     "socket.io-client": "~1.3.2",
     "jquery": "~2.1.3"
+  },
+  "resolutions": {
+    "threejs": "74e7d09c26"
   }
 }
