--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "main": "Gruntfile.js",
   "dependencies": {
     "grunt-bower-concat": "^0.4.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.7.0"
   },
   "devDependencies": {},
